[package]
name = "cht-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = "z"

[dependencies]
rust_fzf = "0.1.1"
dialoguer = { version = "0.10.0", features = ["fuzzy-select"] }
curl = "0.4.44"
